22-ingress-ingressController/pod-python.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python-server
  labels:
    app: python-server
spec:
  containers:
  - name: python-server
    image: albertalvin/python-server:1.0.0-python3.12
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: python-server
spec:
  selector:
    app: python-server
  ports:
  - port: 5000
    targetPort: 8080
