22-ingress-ingressController/pod-spring.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring
  labels:
    app: spring
spec:
  containers:
  - name: spring
    image: albertalvin/k8s-spring-hello:0.0.6-SNAPSHOT
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    ports:
      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring
spec:
  type: ClusterIP
  selector:
    app: spring
  ports:
  - port: 2000
    targetPort: 8080
