22-ingress-ingressController/ingress-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default-backend
  namespace: default
  labels:
    name: ingress-default-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend: # WARNING: use the IP assigned to this Ingress to access the Service.
    service:
      name: python-server
      port:
        number: 5000
          
# NOTE: Use your `hosts` file for testing locally.

# kubectl apply -f ingress-default-backend.yaml
# kubectl delete -f ingress-default-backend.yaml
          
# -> It may take some time for the Ingress to receive a Node IP Adress.
# kubectl get ingress ingress-default-backend -n default
# kubectl describe ingress ingress-default-backend -n default
