22-ingress-ingressController/ingress-subdomains.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-subdomains
  namespace: default
  labels:
    name: ingress-subdomains
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.myapp.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx
            port: 
              number: 4000
  - host: spring.myapp.com
    http:
      paths:
        - pathType: Exact
          path: /
          backend:
            service:
              name: spring
              port:
                number: 2000

# NOTE: Use your `hosts` file for testing locally.

# kubectl apply -f ingress-subdomains.yaml
# kubectl delete -f ingress-subdomains.yaml
          
# -> It may take some time for the Ingress to receive a Node IP Adress.
# kubectl get ingress ingress-subdomains -n default
# kubectl describe ingress ingress-subdomains -n default
